--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+        <div class="card main-card">
+          <div class="card-content">
+            <h1 class="card-title">Task List</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
