--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         <div class="card main-card">
           <div class="card-content">
             <h1 class="card-title">Task List</h1>
+            <div class="row">
+              <form id="task-form">
+                <div class="input-field col s12">
+                  <input type="text" name="task" id="task">
+                  <label for="task">New Task</label>
+                </div>
+                <input type="submit" class="btn" value="Add Task">
+              </form>
+            </div>
           </div>
         </div>
       </div>
