--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="col s12">
         <div class="card main-card">
           <div class="card-content">
-            <h1 class="card-title">Task List</h1>
+            <span class="card-title">Task List</span>
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
@@ -25,6 +25,16 @@
                 <input type="submit" class="btn" value="Add Task">
               </form>
             </div>
+          </div>
+
+          <div class="card-action task-list">
+            <h5 class="task-list__title">Tasks</h5>
+            <div class="input-field col s12">
+              <input type="text" name="filter" id="filter">
+              <label for="filter">Filter Tasks</label>
+            </div>
+            <ul class="collection task-list__wrap"></ul>
+            <button class="btn btn__clear-tasks black hoverable">Clear Tasks</button>
           </div>
         </div>
       </div>
